--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "webapiContextConnection": "Data Source=localhost;Database=SPAminesweeperDB;Trusted_Connection=True;Integrated Security=SSPI;MultipleActiveResultSets=true;Encrypt=False"
+  }
 }
