--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SPAmineseweeper-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=SPAminesweeperDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
       "LogLevel": {
