--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
     "rimraf": "^5.0.0",
+    "styled-components": "^6.1.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
