--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -58,7 +58,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "prettier"
     ]
   },
   "browserslist": {
