--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "styled-components": "^6.1.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.0.0"
   }
 }
