feat(ClientApp): add game duration and game over messages to improve user experience feat(ClientApp): add right-click to flag tiles for better game interaction refactor(ClientApp): change border units from px to em for better responsiveness refactor(ClientApp): remove prettier from eslintConfig to avoid conflicts feat(Controllers): add flagtile endpoint to allow flagging of tiles refactor(Controllers): move game creation and checking logic from GameHelper to GameController for better encapsulation feat(Helper): add ToggleFlag function to TileHelper to support flagging of tiles feat(package.json): add prettier to dependencies for consistent code formatting

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -59,8 +59,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "prettier"
+      "react-app"
     ]
   },
   "browserslist": {
