--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.5.1",
+    "prettier": "^3.1.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
