Implement player chat functionality by using SignalR and React

--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.1",
+    "@microsoft/signalr": "^8.0.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
+    "install": "^0.13.0",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
@@ -17,7 +19,8 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
     "rimraf": "^5.0.0",
-    "styled-components": "^6.1.0",
+    "snpm": "^0.1.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
