--- a/SPAmineseweeper.csproj
+++ b/SPAmineseweeper.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.15" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.3" />
   </ItemGroup>
 
   <ItemGroup>
