--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "prettier": "^3.1.0",
+    "react-signalr": "^0.2.19",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
