--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,6 +17,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
+    "react-signalr": "^0.2.19",
     "reactstrap": "^9.1.9",
     "rimraf": "^5.0.0",
     "snpm": "^0.1.1",
