--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "api": "^6.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
